adding users and JWT
