# src/users/user.type.ts
@@ -1,0 +1,6 @@
+export type User = {
+    _id?: string; // Optional, as it will be generated by MongoDB
+    username: string;
+    email: string;
+    password: string; // Hashed password
+};
